# Tiny-1C-Python-Bindings

./: .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  CMakeLists_python.txt  MANIFEST.in  Makefile  QUICK_REFERENCE.md  README.md  RELEASING.md  WHEEL_REPAIR.md  WINDOWS_INSTALL.md  WINDOWS_SETUP_GUIDE.md  build.sh  build_cmake.sh  build_wheel.bat  build_wheel.sh  build_windows.bat  camera.cpp  camera.h  check_dll_deps.py  check_winusb_driver.md  clean.sh  cmd.cpp  cmd.h  cross_compile.sh  data.h  debug_dll_loading.py  display.cpp  display.h  install.sh  install_vcredist.py  lib_copy.sh  lib_dll_copy.py  libs_version.txt  pyproject.toml  python_bindings.cpp  python_bindings_simple.cpp  python_bindings_tiny.cpp  release_note.txt  requirements.txt  (+21 more)
.github/workflows/: build-wheels.yml
drivers/USB_Camera/: USB_Camera.inf  _DriverFiles.7z
examples/: tiny_thermal_camera_wrapper.py
libir_sample/: libir_sample.vcxproj  libir_sample.vcxproj.filters
libs/linux/aarch64-none-linux-gnu_libs/: libusb-1.0.so.0
libs/linux/aarch64-v01c01-linux-musl_libs/: libusb-1.0.so.0.2.0
libs/linux/arm-buildroot-linux-uclibcgnueabihf_libs/: libusb-1.0.so.0
libs/linux/arm-himix200-linux_libs/: libusb-1.0.so.0
libs/linux/arm-hisiv300-linux-uclibcgnueabi_libs/: libusb-1.0.so.0.2.0
libs/linux/arm-linux-gnueabihf_libs/: libusb-1.0.so.0.2.0
libs/linux/x86-linux_libs/: libusb-1.0.so.0.2.0
libs/win/Win32/dll/: libirparse.lib  libiruvc.lib
libs/win/Win32/lib/: libirparse.lib  libirprocess.lib  libirtemp.lib  libiruvc.lib
scripts/: build.sh  build_and_test_wheel.bat  build_and_test_wheel.sh  build_windows.bat  clean.sh  generate_import_libs.py  lib_copy.sh  lib_dll_copy.py  setup_dll_collection.py  test_fresh_install.bat  test_fresh_install.py  test_wheel_repair.py  verify_msvcr100.py
src/libs/: libirprocess.lib  libiruvc.lib
src/tiny_thermal_camera/: __init__.py
src/tiny_thermal_camera/libs/: libirtemp.lib
tests/: thermal_camera_demo.py
thermal_camera_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tiny_thermal_camera/: __init__.py
tiny_thermal_camera/libs/: libirparse.lib
tools/: README.md  SETUP_WINDOWS.bat  install_driver.py  troubleshoot.py
